clusters/homelab/apps/stock-guesser/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stock-guesser
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: baseline
    pod-security.kubernetes.io/audit: baseline
