clusters/homelab/apps/stock-guesser/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stock-guesser-app
  namespace: stock-guesser
  labels:
    app: stock-guesser-app
spec:
  selector:
    app: stock-guesser-app
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  type: ClusterIP
