clusters/homelab/apps/stock-guesser/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: stock-guesser
  labels:
    app: stock-guesser-mysql
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
      name: mysql
  selector:
    app: stock-guesser-mysql
